--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
+    "gh-pages": "^5.0.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.6.0",
     "marked": "^4.1.0",
